--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
 
     <div class="calculator">
-        <h1>Affiliate Earnings Calculator</h1>
+        <h1>Affiliate Earnings Calculator (For Affiliates)</h1>
         
         <div class="form-group">
             <label for="salePrice">Enter Sale Price (€):</label>
