--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Affiliate Earnings Calculator (For Affiliates)
-</title>
+    <title>Affiliate Earnings Calculator (For Affiliates)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -56,7 +55,7 @@
 <body>
 
     <div class="calculator">
-        <h1>Affiliate Earnings Calculator (For Affiliates)</h1>
+        <h1 style="color: #1134d1;">Affiliate Earnings Calculator (For Affiliates)</h1>
         
         <div class="form-group">
             <label for="salePrice">Enter Sale Price (€):</label>
